refactor : HttpRequest 의존성 변경
- 기존 nio를 사용하던 라이브러리 삭제